2005-05-29  Philippe Gerum  <rpm@xenomai.org>

	* arch/ppc/patches: Upgrade to Adeos 2.6.10-ppc-r7c2.

2005-05-29  Dmitry Adamushko  <dmitry.adamushko@datacon.at>

	* nucleus/pipe.c: Rewrite the blocking read implementation from
	the special device side to fix SMP issues.

2005-05-27  Philippe Gerum  <rpm@xenomai.org>

	* arch/ia64, include/nucleus/asm-ia64: Merge the ia64 port, a
	contribution of the HYADES (ITEA) project.

2005-05-26  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/patches: Upgrade to Adeos 2.6.9,10,11-i386-r10 final.

2005-05-24  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/heap.c (rt_heap_create), skins/rtai/heap.c
	(rt_queue_create): Return -EPERM instead of panicking.

2005-05-23  Dmitry Adamushko  <dmitry.adamushko@datacon.at>

	* nucleus/pipe.c: Fix poll/select support, and prevent duplicate
	open requests on a same device from accidentally trashing the
	state information block of the active connection.

2005-05-22  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* include/nucleus/asm-i386/hal.h (rthal_root_host_task): Use 
	THREAD_SIZE to avoid bug with 4K kernel stacks.

	* nucleus/pod.c (xnpod_schedule): re-read current scheduler when
	resuming from xnarch_switch_to, in order to cope with migration
	while suspended.

2005-05-22  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/task.c (__task_delete_hook): Use safe memory release
	service to discard the TCB of the destroyed task.

	* include/nucleus/heap.h (xnfreesafe): Provide a safe xnfree()
	helper delaying the actual memory release until the current thread
	is switched out.

	* nucleus/heap.c (xnheap_schedule_free, xnheap_finalize_free): Add
	delayed free service.

	* nucleus/synch.c (xnsynch_release_all_ownerships): Fix empty
	claimq case.

2005-05-21  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/timer.c (xntimer_do_timers): Optimize the inner loop
	by rescheduling the timers on-the-fly.

2005-05-20  Philippe Gerum  <rpm@xenomai.org>
